--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,3 +7,10 @@ $black: #1A1B1D;
 $blue-1: #4460F7;
 $blue-2: #2140E8;
 $gold: #F9A52B;
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap'); //Nunito font
+
+body {
+  font-family: 'Nunito', sans-serif;
+  font-size: 16px;
+}
