--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -14,6 +14,7 @@
   padding: 0.6875rem 1.5rem;
   text-decoration: none;
   font-size: 0.825rem;
+  text-align: center;
 }
 
 .button--empty {
@@ -71,3 +72,65 @@
     height: 100%;
   }
 }
+
+.product {
+  display: flex;
+  flex-direction: column;
+  max-height: 25rem;
+  background-color: $white;
+  border-radius: 0.5rem;
+  max-width: 20rem;
+  overflow: hidden;
+
+  .product__image {
+    height: 40%;
+    position: relative;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      bottom: 20%;
+      position: relative;
+
+      &.product__image--disabled {
+        filter: grayscale(100%);
+      }
+    }
+
+    .product__image__promo {
+      position: absolute;
+      left: 0;
+      top: 10%;
+      background-color: $gold;
+      color: $white;
+      padding: 0.25rem 1rem;
+      font-size: 0.875rem;
+
+    }
+  } //.product__image
+
+  .product__text {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 1rem;
+
+    .product__title {
+
+      h2 {
+        margin: 0;
+        font-size: 1.125rem;
+      }
+    } //.product__title
+
+    .product__description {
+      color: $gray-4;
+      font-size: 0.825rem;
+    } //.product__description
+
+    .product__rating {
+      margin-top: auto;
+    } //.product__rating
+
+  } //.product__text
+} //.product
