--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -130,6 +130,22 @@
 
     .product__rating {
       margin-top: auto;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      gap: 0.625rem;
+      padding-bottom: 1.125rem;
+
+      .star {
+        height: 0.75rem;
+        color: $gold;
+        width: auto;
+        &.star--empty {
+          color: $gray-3;
+        }
+      }
+
+
     } //.product__rating
 
   } //.product__text
