Added mixins, initial rwd for the header

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,3 +14,31 @@ body {
   font-family: 'Nunito', sans-serif;
   font-size: 16px;
 }
+
+$small-width: 480px;
+$medium-width: 768px;
+$large-width: 1024px;
+
+@mixin extra-small {
+  @media (max-width: #{$small-width - 1px}) {
+    @content;
+  }
+}
+
+@mixin small {
+  @media (min-width: #{$small-width}) {
+    @content;
+  }
+}
+
+@mixin medium {
+  @media (min-width: #{$medium-width}) {
+    @content;
+  }
+}
+
+@mixin large {
+  @media (min-width: #{$large-width}) {
+    @content;
+  }
+}
