--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -82,10 +82,18 @@
   display: flex;
   flex-direction: column;
   height: 25rem;
+  width: 20rem;
   background-color: $white;
   border-radius: 0.5rem;
-  width: 20rem;
   overflow: hidden;
+
+  &.product--empty {
+    max-width: 37.5rem;
+  }
+
+  @include large {
+    width: 18rem;
+  }
 
   .product__image {
     height: 40%;
@@ -208,9 +216,8 @@
 
 
     .modal__window {
-      min-height: 35rem;
+      height: 35.625rem;
       max-width: 37.5rem;
-      width: 100%;
       background-color: $white;
       border-radius: 0.5rem;
       display: flex;
@@ -221,6 +228,10 @@
       flex-direction: column;
       gap: 1.5rem;
       box-shadow: 0 0.5rem 2rem rgba($black, 0.15);
+
+      @include large {
+        height: 35rem;
+      }
 
       .modal__close{
         align-self: flex-end;
