--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -13,6 +13,8 @@ header {
     flex-wrap: wrap;
     padding: 3.25rem 1.5rem 2rem;
     gap: 1rem;
+    max-width: 1280px;
+    margin: 0 auto;
 
     @include large {
       padding: 3.25rem 6.75rem 2rem;
@@ -62,6 +64,8 @@ section.products {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 1280px;
+    margin: 0 auto;
 
     .products__list {
       display: flex;
