Moved checkboxes and modal window to their own component files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,8 @@
 @import 'normalize';
 @import 'base';
 @import 'layout';
+
+
 @import 'components';
+@import 'components/checkbox';
+@import 'components/modal';
