Moved serachbox, button and logo styles to their own component files

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,10 @@
 @import 'layout';
 
 
-@import 'components';
 @import 'components/checkbox';
 @import 'components/modal';
 @import 'components/pagination';
 @import 'components/product';
+@import 'components/searchBox';
+@import 'components/button';
+@import 'components/logo';
