--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -23,5 +23,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+  }
+
+  .pagination__spacer {
+    display: flex;
+    justify-content: center;
+    padding: 0.25rem;
   }
 }
