--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -3,6 +3,9 @@
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2.5rem;
-  color: $black;
   margin: 0;
+  a {
+    text-decoration: none;
+    color: $black;
+  }
 }
