--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -1,14 +1,14 @@
-.loginPage__wrapper {
-  height: 100vh;
+.loginPage {
   display: flex;
   flex-direction: row;
-
+  height: 100vh;
 }
 
 .loginPage__image {
+  display: none;
   max-width: 40rem;
   overflow: hidden;
-  display: none;
+
   @include large() {
     display: block;
   }
@@ -19,7 +19,7 @@
   }
 }
 
-.loginPage__form {
+.loginPage__content {
   display: block;
   flex-grow: 1;
 
@@ -37,7 +37,7 @@
   }
 }
 
-.login {
+.login__wrapper {
   flex-basis: 100%;
   align-self: flex-start;
   display: flex;
@@ -49,20 +49,27 @@
   width: 100%;
 
   @include medium() {
-    align-self: center;
+    justify-content: center;
   }
 
   @include large() {
     padding: 3.25rem 6.75rem 2rem;
   }
 
-  .login__wrapper {
+  .login__wrapper__two {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    width: 100%;
     max-width: 39rem;
+    width: 100%;
+
+    @include large() {
+      width: 100%;
+    }
+    @include medium() {
+      width: auto;
+    }
 
     .login__box {
       @include large() {
@@ -93,8 +100,8 @@
         }
 
         label {
-
           width: 100%;
+
           input[type="password"], input[type="text"] {
             box-sizing: border-box;
             display: block;
