Fixed background colors, finished empty products list style

--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -22,6 +22,7 @@
 .loginPage__content {
   display: block;
   flex-grow: 1;
+  background-color: $white;
 
   @include large() {
     display: flex;
