--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,8 +1,10 @@
 body {
-  background-color: $white;
+  background-color: $gray-1;
+  height: 100vh;
 }
 
 header {
+  background-color: $white;
 
   .header__wrapper {
     display: flex;
