--- a/src/styles/components/_checkbox.scss
+++ b/src/styles/components/_checkbox.scss
@@ -1,3 +1,12 @@
+body::after{
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  z-index: -1;
+  content: url('../../assets/icons/Tick.svg');
+}
+
 input[type="checkbox"] {
   position: absolute;
   opacity: 0;
