--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -28,17 +28,6 @@
     position: relative;
     overflow: hidden;
 
-    .image__loading {
-      position: absolute;
-      top: 0;
-      height: 100%;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 3;
-    }
-
     img {
       width: 100%;
       bottom: 20%;
@@ -46,6 +35,20 @@
 
       &.product__image--disabled {
         filter: grayscale(100%);
+      }
+    }
+
+    .product__image__loadingOverlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      top: 0;
+      opacity: 1;
+      transition: opacity ease-in-out 0.5s;
+
+      &.product__image__loadingOverlay--disappear{
+        opacity: 0;
       }
     }
 
