--- a/src/styles/components/_spinner.scss
+++ b/src/styles/components/_spinner.scss
@@ -5,6 +5,26 @@
   border: 0.25rem solid $gray-2;
   border-radius: 50%;
 
+  &.spinner--small {
+    width: 1rem;
+    height: 1rem;
+    border: 0.25rem solid $gray-2;
+
+    &:after {
+      position: absolute;
+      top: -0.25rem;
+      left: -0.25rem;
+      display: block;
+      content: '';
+      width: 1rem;
+      height: 1rem;
+      border: 0.25rem solid;
+      border-radius: 50%;
+      border-color: $blue-1 transparent transparent transparent;
+      animation: rotate360 linear 1s infinite;
+    }
+  }
+
   &:after {
     position: absolute;
     top: -0.25rem;
@@ -19,6 +39,7 @@
     animation: rotate360 linear 1s infinite;
   }
 }
+
 
 @keyframes rotate360 {
   from{transform: rotate(0deg)}
